--- a/main.html
+++ b/main.html
@@ -5,12 +5,47 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+<style>
+		
+	.center{
+	/* Set the background color to light blue */
+background-color: #ADD8E6;
 
+/* Set the border to black with a width of 2px */
+border: 2px solid #000000;
+
+/* Set the width and height of the box to 300px */
+width: 300px;
+height: 300px;
+
+/* Center the box horizontally and vertically */
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+/* Center the text inside the box */
+text-align: center;
+line-height: 300px;
+				 
+	}
+	
+</style>
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="center">
+		<p>This is center</p>
+	  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
 </html>
+<!-- Create a ''light-blue'' colored box at the ''center of webpage'' with
+
+Black borders of 2px
+A text at the center of box saying "This is center"
+Note:
+
+Use position property for centering div and content inside it -->
