--- a/main.html
+++ b/main.html
@@ -6,29 +6,26 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <style>
-		
-	.center{
-	/* Set the background color to light blue */
-background-color: #ADD8E6;
-
-/* Set the border to black with a width of 2px */
-border: 2px solid #000000;
-
-/* Set the width and height of the box to 300px */
-width: 300px;
-height: 300px;
-
-/* Center the box horizontally and vertically */
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-
-/* Center the text inside the box */
-text-align: center;
-line-height: 300px;
-				 
-	}
+		*{
+			margin: 0;
+			padding: 0;
+		}
+.center{
+	left: 40%;
+	top: 40%;
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	border: 2px solid;
+	background-color: lightblue;
+	
+}
+.center p{
+	position: relative;
+	text-align: center;
+	/* left: 50%; */
+	top: 40%;
+}
 	
 </style>
 <body>
